<resources>
    <string name="app_name">PracticalTest01</string>
    <string name="press_me">press_me</string>
    <string name="press_me_too">press_me_too</string>
    <string name="navigate_to_secondary_activity">navigate_to_secondary_activity</string>
    <string name="start_service">start service</string>
    <string name="zero">0</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="total">total</string>
</resources>